--- a/page.html
+++ b/page.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-  <title>Chronometre</title>
-  <meta author="abxzok379">
-</head>
-<body>
-  <h1>Chronomètre</h1>
-  <br><br>
-   <div id="chrono">00:00</div>
-  <br><br>
-  <nav>
-    <button type="button" id="boutonStart" onclick="startChrono()">Start</button>
-    <button type="button" id="boutonStop" onclick ="stopChrono()">Stop</button>
-    <button type="button" id="boutonReset" onclick ="resetChrono()">Reset</button>
-  </nav>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <title>Chronometre</title>
+  </head>
+  <body>
+    <h1>Chronomètre</h1>
+    <br><br>
+    <div id="chrono">00:00</div>
+    <br><br>
+    <nav>
+      <button type="button" id="boutonStart" onclick="startChrono()">Start</button>
+      <button type="button" id="boutonStop" onclick ="stopChrono()">Stop</button>
+      <button type="button" id="boutonReset" onclick ="resetChrono()">Reset</button>
+    </nav>
+  </body>
 </html>
